finished test theme

--- a/gatsby-theme-events/package.json
+++ b/gatsby-theme-events/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gatsby-theme-events",
+    "name": "@ck9891/gatsby-theme-events",
     "version": "1.0.0",
     "license": "MIT",
     "main": "index.js",
@@ -19,7 +19,12 @@
         "react-dom": "^16.12.0"
     },
     "dependencies": {
+        "@emotion/core": "^10.0.27",
+        "@emotion/styled": "^10.0.27",
+        "@mdx-js/react": "^1.5.3",
         "gatsby-source-filesystem": "^2.1.43",
-        "gatsby-transformer-yaml": "^2.2.20"
+        "gatsby-theme-ui": "^0.2.0",
+        "gatsby-transformer-yaml": "^2.2.20",
+        "theme-ui": "^0.2.52"
     }
 }
